--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name=".Login2Activity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,12 +26,16 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".EditActivity"
+        <activity
+            android:name=".EditActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ActiveTaskActivity"
+        <activity
+            android:name=".ActiveTaskActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".TaskChartActivity"
+        <activity
+            android:name=".TaskChartActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
